Add pretty output, energy estimation, polled operation
